--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'mixins';
 @import 'normalize';
+@import 'vertical-rhythm';
 @import 'grid';
 @import 'global';
 @import 'forms';
