--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,9 @@
-@import 'config';
-@import 'mixins';
 @import 'normalize';
 @import 'vertical-rhythm';
+@import 'config';
+@import 'mixins';
 @import 'grid';
 @import 'global';
 @import 'forms';
+@import 'tables';
+@import 'animation';
